# Ivy_Net

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  530_sports_pipeline.ipynb  540_tenure_pipeline.ipynb  6d_job.slurm  AGENTS.md  Cursor Workspace PDE.code-workspace  Ivy_Net.code-workspace  Rivanna.code-workspace  apply_url_updates.sh  build_openalex_cache.slurm  discover_faculty_urls.slurm  environment-tenure_net.yml  functionsG_working.py  ivy_net_keys  ivy_net_keys.pub  myjob.local.sh.example  myjob.slurm  pdf_styles.css  pdf_styles_notebook.css  pipe_job.slurm  pyproject.toml  pyrightconfig.json  requirements.txt  run_stage3b_cli.py  sim_job.slurm  slurm-6d_job-11715633-output.ipynb  slurm-6d_job-11715633.err  slurm-6d_job-11715633.out  slurm-6d_job-11720992-output.ipynb  slurm-6d_job-11720992.err  slurm-6d_job-11720992.out  slurm-pipe_job-11757198-output.ipynb  slurm-pipe_job-11757198.err  slurm-pipe_job-11757198.out  slurm-pipe_job-11766185-output.ipynb  slurm-pipe_job-11766185.err  slurm-pipe_job-11766185.out  (+9 more)
.specstory/: .project.json  statistics.json
1-Various_PDE_and_Chat_stuff/: Helpful_code.py  hier_master_sandbok.xlsx
backups/: 510_live_BACKUP.ipynb
cox_model/: Cox Model Initial Graphs.pptx  README.md  cox_chat.docx  cox_data.csv  cox_data.xlsx  cox_data_exact_dors.csv  cox_data_exact_dors.xlsx  cox_data_exact_dors_new.xlsx  cox_data_key.xlsx  cox_data_many_ygs.csv  cox_data_many_ygs.xlsx  cox_data_prestige.csv  cox_data_prestige.xlsx  functions_cox.py  lifelines_testing.ipynb  prestige_chat.docx  requirements.txt
docs/: README.md  (+2 more)
(+520 files in other folders)
